// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AttributeLabel /> should render a large hollow attribute label 1`] = `
<span
  className="label AttributeLabel alert large hollow"
>
  Test
</span>
`;

exports[`<AttributeLabel /> should render an attribute label 1`] = `
<span
  className="label AttributeLabel alert small"
>
  Test
</span>
`;

exports[`<AttributeLabel /> should render an attribute label with default values 1`] = `
<span
  className="label AttributeLabel neutral small"
>
  Test
</span>
`;
